src/objects/Commission_Split__c.object
<CustomObject>
    <fields>
        <fullName>Close_Date_Amount__c</fullName>
        <formula>Team_member_Amount__c *(0.5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close Date Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commission_Amount__c</fullName>
        <formula>(Opportunity__r.MS_Portion_of_Sale__c - 
CASE( Role__c , 
&quot;Production&quot;, Opportunity__r.Total_Stringer_Fee__c, 
0) ) 
* (VALUE(TEXT( Commission__c ))/100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commission Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Amt__c</fullName>
        <formula>Commission_Percentage__c  *  (Opportunity__r.Amount - Opportunity__r.Total_Stringer_Fee__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commission Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Commission_Percentage_2__c</fullName>
        <label>Commission Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Commission_Percentage__c</fullName>
        <label>Commission Percentage</label>
        <precision>9</precision>
        <required>true</required>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Commission__c</fullName>
        <label>Commission %</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>1.5</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>2.5</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>3.5</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>4.5</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>5.5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>6.5</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>7.5</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>8.5</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>9.5</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DBD_Sales_Region_Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DBD Sales Region Assignment</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>MetrostudySalesRegionAssignment__c.Role__c</field>
                <operation>equals</operation>
                <value>DBD</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>MetrostudySalesRegionAssignment__c</referenceTo>
        <relationshipLabel>Commission Splits</relationshipLabel>
        <relationshipName>Commission_Splits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FC_DBD_Split_Amount__c</fullName>
        <formula>Opportunity__r.FC_DBD_Revenue_Summary__c *  Commission_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DBD Split Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Is_Director__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Director?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Meyers_Id__c</fullName>
        <description>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</description>
        <externalId>true</externalId>
        <inlineHelpText>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</inlineHelpText>
        <label>Meyers Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Opportunity_2__c</fullName>
        <formula>HYPERLINK(&quot;https://cs24.salesforce.com/&quot; &amp; Opportunity__r.Id,Opportunity__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Commission Splits</relationshipLabel>
        <relationshipName>Commission_Splits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Role_2__c</fullName>
        <formula>Team_Member__r.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Commission Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Selling</fullName>
                </value>
                <value>
                    <fullName>Production</fullName>
                </value>
                <value>
                    <fullName>RD Referral</fullName>
                </value>
                <value>
                    <fullName>DBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Running_User_Match__c</fullName>
        <formula>IF( Team_Member__c = $User.Id , 1 , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Running User Match</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scheduled_Product_Delivery_Date_Amount__c</fullName>
        <formula>Team_member_Amount__c * (0.5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheduled Product Delivery Date Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Stringer_Consultant__c</fullName>
        <label>Stringer Consultant:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Commission_Splits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Team_member_Amount__c</fullName>
        <formula>Commission_Percentage__c * (Opportunity__r.Amount- Opportunity__r.Total_Stringer_Fee__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team Member Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Commission Split</label>
    <nameField>
        <displayFormat>CS-{000000}</displayFormat>
        <label>Commission Split Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commission Splits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>